[package]
name = "actix_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
# for reading from .env files
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }

# AWS dynamic databasse
aws-config = "^0.8"
aws-sdk-dynamodb  = "^0.8"
log = "^0.4"

strum_macros = "^0.24"
strum = { version = " ^0.24", features = ["derive"]}
derive_more = "^0.99"
